import "SettingMessage.proto";
import "InitClient.proto";
import "FullChunk.proto";
import "ChunkZone.proto";

message ProtocolMessage {
  enum PacketContent
  {
    ANSWER = 0;
    SETTING = 1;
    CLINIT = 2;
    CHUNK = 3;
    CHUNKZONE = 4;
  }
  required PacketContent content = 1;
  optional SettingMessage settings = 2;
  optional InitClient clInit = 3;
  optional FullChunk fullChunk = 4;
  optional WorldZone worldZone = 5;
}
